--- a/src/components/FeaturedProducts/FeaturedProducts.scss
+++ b/src/components/FeaturedProducts/FeaturedProducts.scss
@@ -18,7 +18,7 @@
     margin: 20px;
   }
   @include mobilexs {
-    margin: 8px 0;
+    margin: 10px 0;
   }
 
   .scrolls {
@@ -136,4 +136,10 @@
       overflow-x: scroll;
     }
   }
+}
+
+.swiper-pagination-bullet {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
 }
